sfdx-source/main/objects/External_Nlp_Model_Setting__mdt/External_Nlp_Model_Setting__mdt.object-meta.xml
<CustomObject>
    <label>External Nlp Model Setting</label>
    <pluralLabel>External Nlp Model Settings</pluralLabel>
</CustomObject>