sfdx-source/main/objects/External_Nlp_Model_Setting__mdt/fields/External_Nlp_Service_Setting__c.field-meta.xml
<CustomField>
    <fullName>External_Nlp_Service_Setting__c</fullName>
    <label>External Nlp Service Setting</label>
    <referenceTo>External_Nlp_Service_Setting__mdt</referenceTo>
    <relationshipLabel>External Nlp Model Settings</relationshipLabel>
    <relationshipName>External_Nlp_Model_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>