sfdx-source/main/objects/External_Nlp_Model_Setting__mdt/fields/Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Id__c</fullName>
    <label>Model Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>