sfdx-source/main/objects/External_Nlp_Model_Setting__mdt/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <label>Named Credential Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>